Fixed social media icon alignment on the bottom of the page.

--- a/app/views/main/main.css
+++ b/app/views/main/main.css
@@ -437,6 +437,11 @@ nav.navbar.navbar-inverse.navbar-static-top {
   }
 }
 @media screen and (max-width: 767px) {
+  
+  .main-info-box1 {
+  /*This hides the carousel text box */
+    display: none;
+  }
 
   .carousel-inner > .item > img {
   margin-top: 60px;
@@ -570,6 +575,7 @@ nav.navbar.navbar-inverse.navbar-static-top {
 }
 
 div#main-footer-center {
+  margin-left: 20%;
   width: 60%;
   display: inline-block;
   
@@ -668,9 +674,6 @@ The elegant design of these bracelets is unmatched this side of India. The elega
   }
   #main-carousel1 {
     height: 300px;
-  }
-  #main-footer-center ul {
-    margin: auto 0;
   }
   #main-footer-left {
     display: none;
